資料庫查詢增加， 主頁修改。

--- a/webmvc/Web.config
+++ b/webmvc/Web.config
@@ -11,8 +11,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="MvcConnectionString"
-         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|Database1.mdf;Integrated Security=True"
+    <add name="NorthwindConnectionString"
+         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|Northwind.mdf;Integrated Security=True"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
